--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
-  "semi": false,
-  "singleQuote": true
+	"semi": false,
+	"singleQuote": true,
+	"endOfLine": "auto",
+	"trailingComma": "all",
+	"useTabs": true
 }
