--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "countup.js": "^2.0.5",
     "nuxt": "^2.13.0",
     "vue": "^2.6.11"
   },
