--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bootstrap-vue": "^2.15.0",
     "countup.js": "^2.0.5",
     "nuxt": "^2.13.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-count-to": "^1.0.13"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
