--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "countup.js": "^2.0.5",
