--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "bootstrap-vue": "^2.15.0",
     "countup.js": "^2.0.5",
     "nuxt": "^2.13.0",
+    "swiper": "^6.0.2",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-count-to": "^1.0.13"
   },
   "devDependencies": {
