--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.0.1",
+    "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
+    "sass-loader": "^9.0.2",
     "vue-jest": "^3.0.4"
   }
 }
