install vue-observe-visibility package

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "swiper": "^6.0.2",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
-    "vue-count-to": "^1.0.13"
+    "vue-count-to": "^1.0.13",
+    "vue-observe-visibility": "^0.4.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
