--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-count-to": "^1.0.13",
     "vue-observe-visibility": "^0.4.6",
+    "vue-scrollto": "^2.18.1",
     "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
