--- a/package.json
+++ b/package.json
@@ -6,43 +6,42 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "export": "nuxt export",
-    "serve": "nuxt serve",
+    "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
     "test": "jest"
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@nuxtjs/pwa": "^3.3.5",
     "aos": "^3.0.0-beta.6",
-    "bootstrap": "^4.5.0",
-    "bootstrap-vue": "^2.15.0",
-    "countup.js": "^2.0.5",
-    "nuxt": "^2.13.3",
-    "nuxt-i18n": "^6.13.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
+    "countup.js": "^2.0.7",
+    "nuxt": "^2.15.3",
+    "nuxt-i18n": "^6.22.2",
     "swiper": "^5.4.5",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-awesome-swiper": "^4.1.1",
     "vue-count-to": "^1.0.13",
     "vue-observe-visibility": "^0.4.6",
-    "vue-scrollto": "^2.18.1",
+    "vue-scrollto": "^2.20.0",
     "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^3.0.0",
-    "@nuxtjs/eslint-module": "^2.0.0",
-    "@vue/test-utils": "^1.0.3",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.1.0",
-    "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-nuxt": "^1.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.1.0",
+    "@babel/eslint-parser": "^7.13.10",
+    "@nuxt/types": "^2.15.3",
+    "@nuxtjs/eslint-config": "^6.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "@vue/test-utils": "^1.1.3",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
     "node-sass": "^4.14.1",
-    "prettier": "^2.0.5",
-    "sass-loader": "^9.0.2",
-    "vue-jest": "^3.0.6"
+    "prettier": "^2.2.1",
+    "sass-loader": "^10.1.1",
+    "vue-jest": "^3.0.7"
   }
 }
