--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nuxt/types": "^2.15.3",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/tailwindcss": "^4.0.2",
     "@vue/test-utils": "^1.1.3",
     "babel-jest": "^26.6.3",
     "eslint": "^7.23.0",
@@ -40,6 +41,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "node-sass": "^4.14.1",
+    "postcss": "^8.2.8",
     "prettier": "^2.2.1",
     "sass-loader": "^10.1.1",
     "vue-jest": "^3.0.7"
