--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
-    "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
+    "sass": "^1.57.1",
     "sass-loader": "^10.1.1",
     "vue-jest": "^3.0.7"
   }
